tests/compile_fail/compound_assign_struct/source.c
struct Box {
    int value;
};

int main(void) {
    struct Box a;
    struct Box b;
    a += b;
    return 0;
}
